--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -109,31 +109,42 @@ jobs:
             local current_branch=$3
             local previous_branch=$4
 
-            echo "## Comparison: $current_branch vs. $previous_branch" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "| Count | $current_branch Value | $previous_branch Value | Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
-            echo "|-------|------------------------|------------------------|--------|" >> ${{ env.FEATURE_FLAGS_DOC }}
-
-            # Find new, updated, and deleted values
-            new_values=()
-            deleted_values=()
-
+            # New values table
+            echo "## New Values in $current_branch (Compared to $previous_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Count | $current_branch Value | $previous_branch Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|-------|------------------------|------------------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            
             count=1
+            new_found=false
             for value in "${current_values[@]}"; do
               if [[ ! " ${previous_values[*]} " =~ " ${value} " ]]; then
-                new_values+=("$value")
                 echo "| $count | \`$value\` | N/A | New 🔵 |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                new_found=true
                 ((count++))
               fi
             done
+            if [ "$new_found" = false ]; then
+              echo "| No new values found |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            fi
+            echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
 
+            # Deleted values table
+            echo "## Deleted Values in $previous_branch (Compared to $current_branch)" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "| Count | $previous_branch Value | $current_branch Status |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            echo "|-------|------------------------|------------------------|" >> ${{ env.FEATURE_FLAGS_DOC }}
+            
+            count=1
+            deleted_found=false
             for value in "${previous_values[@]}"; do
               if [[ ! " ${current_values[*]} " =~ " ${value} " ]]; then
-                deleted_values+=("$value")
-                echo "| $count | N/A | \`$value\` | Deleted 🔴 |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                echo "| $count | \`$value\` | N/A | Deleted 🔴 |" >> ${{ env.FEATURE_FLAGS_DOC }}
+                deleted_found=true
                 ((count++))
               fi
             done
-
+            if [ "$deleted_found" = false ]; then
+              echo "| No deleted values found |" >> ${{ env.FEATURE_FLAGS_DOC }}
+            fi
             echo "" >> ${{ env.FEATURE_FLAGS_DOC }}
           }
 
